--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "port": 5000,
     "mongodbUri": "mongodb://localhost:27017/foodmood-dev",
+    "origin": "http://localhost:3000",
     "environmentName": "local",
     "storage": "fs",
     "s3": {
