--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.3.2",
+    "cors": "^2.8.5",
     "body-parser": "^1.20.0"
   }
 }
